Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.11-dev-814-g2b55073 https://github.com/reactos/reactos/commit/2b5507336017cdea726f146a225823a932df54c2 (was just an unhider, not guilty. Guilty is older)
Description
netstat crashes during parsing cmdline options when it is called like this
netstat -abnop
|
0.4.15-dev-6172-gc63489f_netstatCrash_abnop.png![]()
0.4.15-dev-6172-gc63489f_netstatCrash_abnop.log![]()
Expected result of MS netstat on XPSP3:
MS_netstat_on_XPSP3_does_neither_show_UDP_nor_TCP_connections_then.PNG![]()
but it doesn't crash
Please notice that our netstat also does not crash when called like that
netstat -abnop udp
|
netstat -abnop tcp
|
So the problem is the -p parameter parsing if we don't append a protocol name to it.
Attachments
Issue Links
- relates to
-
CORE-10895 netstat crash by using invalid cmdline options
-
- Resolved
-