[NETSTAT] Fix crash when parsing the protocol CORE-19005